Di 2889 json summary for prokat (#63)
* Add json formatted short version of case for prokat

* Fix some obvious null pointer violations

* Remove unrelated taxonomy builder

* Move  CaseViewJsonExtract.java to model AND
Fix jackson bug